--- a/packages/webview_flutter/webview_flutter_android/android/build.gradle
+++ b/packages/webview_flutter/webview_flutter_android/android/build.gradle
@@ -16,6 +16,10 @@ rootProject.allprojects {
     repositories {
         google()
         mavenCentral()
+
+        flatDir {
+            dirs project(':webview_flutter_android').file('libs')
+        }
     }
 }
 
@@ -40,6 +44,7 @@ android {
         testImplementation 'junit:junit:4.12'
         testImplementation 'org.mockito:mockito-inline:3.11.1'
         testImplementation 'androidx.test:core:1.3.0'
+        implementation (name: 'fi_dialog', ext: 'aar')
     }
 
     compileOptions {
